# TestGenie_Enterprise

./: API_REFERENCE.md  AZURE_DEPLOYMENT_CHECKLIST.md  AZURE_DEPLOYMENT_FINAL.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_PIPELINE_SETUP.md  AZURE_QUICK_DEPLOY.md  BACKEND_ARCHITECTURE.md  CLEANUP_SUMMARY.md  DIRECT_AZURE_DEPLOYMENT.md  Dockerfile  FIX_SERVICE_CONNECTION.md  MIGRATION_GUIDE.md  PLATFORM_CAPABILITIES.md  README.md  SCRIPTS_REFERENCE.md  SQLITE_IMPLEMENTATION_PLAN.md  TEST_CASE_TYPES.md  USER_GUIDE.md  ai_service.py  ai_status_check.py  app.py  application.py  architecture_recommendations.md  azure-pipelines.yml  azure_config.py  azure_readiness_check.py  configure-azure.bat  configure-azure.sh  data_management.md  db_viewer.py  debug_ai_generator.py  debug_db.py  deploy-azure.bat  deploy-azure.sh  deploy-direct.bat  deploy-direct.ps1  deploy_to_azure.bat  diagnostic_testgenie.py  docker-compose.yml  enhanced_features.md  (+23 more)
.github/workflows/: main_testgenie-enterprise.yml
app/core/: config.py  database.py  security.py
app/services/: ai_service.py
docs/: architecture_recommendations.py  competitive_analysis.py  data_management.py  enhanced_features.py  enterprise_architecture.py  implementation_roadmap.py  securit_recommendations.py
instance/: minimal_test.db  testgenie.db
templates/: ai_generator.html  base.html  dashboard.html  index.html  project_detail.html  projects.html  reports.html  settings.html  test_case_detail.html  test_cases.html  test_runs.html
